--- a/buildAndReleaseTask/package.json
+++ b/buildAndReleaseTask/package.json
@@ -1,9 +1,10 @@
 {
   "name": "node-installer-task",
-  "version": "1.0.0",
+  "version": "1.0.5",
   "description": "TFS Build Agent task for installing node.js and npm.",
   "main": "nodetool.js",
   "scripts": {
+    "build": "node make.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
@@ -17,6 +18,7 @@
   "dependencies": {
     "azure-pipelines-task-lib": "^2.7.7",
     "azure-pipelines-tool-lib": "^0.11.0",
+    "make-runnable": "^1.3.6",
     "typed-rest-client": "^1.1.2"
   },
   "devDependencies": {
